--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,12 @@
 <head>
     <title>Timecard Aggregate</title>
     <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
         body {
+            height: 100%;
             font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
             font-size: 100%;
         }
@@ -29,7 +34,20 @@
             font-size: 13pt;
         }
         h2 {
+            margin-top: 0!important;
             margin: 20px;
+        }
+        #loading-cover{
+            position: absolute;
+            z-index: 5;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(1, 1, 1, 0.75);
+        }
+        .progress{
+            width: 75%;
+            margin-top: 30%;
+            margin-left: 15%;
         }
     </style>
     <!-- Latest compiled and minified CSS -->
@@ -38,6 +56,16 @@
     <script src="popup.js"></script>
 </head>
 <body>
+
+<div id="loading-cover">
+    <div class="progress">
+
+        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+            Loading...
+        </div>
+    </div>
+</div>
+
 <h2>Timecard Aggregate</h2>
 <div class="panel-wrap">
     <div class="panel panel-info">
